made it valid strict JSON; comments aren't allowed in strict; forge just hacked it to be lenient, don't assume that'll remain functional

--- a/src/main/resources/assets/mubble/lang/en_gb.json
+++ b/src/main/resources/assets/mubble/lang/en_gb.json
@@ -1,68 +1,68 @@
 {
-    //CREATIVE TABS
+    "comment": "CREATIVE TABS",
     "itemGroup.mubble_blocks": "Mubble Blocks",
     "itemGroup.mubble_items": "Mubble Items",
     "itemGroup.mubble_costumes": "Mubble Costumes",
 
-    //BLOCKS
+    "comment": "BLOCKS",
     "block.mubble.vanadium_block": "Block of Vanadium",
     "block.mubble.vanadium_ore": "Vanadium Ore",
     "block.mubble.red_bricks": "Red Bricks",
     "block.mubble.red_brick_stairs": "Red Brick Stairs",
-    //"block.mubble.red_brick_slab": "Red Brick Slab",
-    //"block.mubble.red_brick_vertical_slab": "Red Brick Vertical Slab",
-    //"block.mubble.red_brick_wall": "Red Brick Wall",
+    "//block.mubble.red_brick_slab": "Red Brick Slab",
+    "//block.mubble.red_brick_vertical_slab": "Red Brick Vertical Slab",
+    "//block.mubble.red_brick_wall": "Red Brick Wall",
     "block.mubble.white_bricks": "White Bricks",
     "block.mubble.white_brick_stairs": "White Brick Stairs",
-    //"block.mubble.white_brick_slab": "White Brick Slab",
-    //"block.mubble.white_brick_vertical_slab": "White Brick Vertical Slab",
-    //"block.mubble.white_brick_wall": "White Brick Wall",
+    "//block.mubble.white_brick_slab": "White Brick Slab",
+    "//block.mubble.white_brick_vertical_slab": "White Brick Vertical Slab",
+    "//block.mubble.white_brick_wall": "White Brick Wall",
     "block.mubble.blunite": "Blunite",
     "block.mubble.blunite_stairs": "Blunite Stairs",
     "block.mubble.blunite_wall": "Blunite Wall",
-    //"block.mubble.blunite_slab": "Blunite Slab",
-    //"block.mubble.blunite_vertical_slab": "Blunite Vertical Slab",
-    //"block.mubble.blunite_wall": "Blunite Wall",
+    "//block.mubble.blunite_slab": "Blunite Slab",
+    "//block.mubble.blunite_vertical_slab": "Blunite Vertical Slab",
+    "//block.mubble.blunite_wall": "Blunite Wall",
     "block.mubble.polished_blunite": "Polished Blunite",
     "block.mubble.polished_blunite_stairs": "Polished Blunite Stairs",
-    //"block.mubble.polished_blunite_slab": "Polished Blunite Slab",
-    //"block.mubble.polished_blunite_vertical_slab": "Polished Blunite Vertical Slab",
+    "//block.mubble.polished_blunite_slab": "Polished Blunite Slab",
+    "//block.mubble.polished_blunite_vertical_slab": "Polished Blunite Vertical Slab",
     "block.mubble.carbonite": "Carbonite",
     "block.mubble.carbonite_stairs": "Carbonite Stairs",
     "block.mubble.carbonite_wall": "Carbonite Wall",
-    //"block.mubble.carbonite_slab": "Carbonite Slab",
-    //"block.mubble.carbonite_vertical_slab": "Carbonite Vertical Slab",
-    //"block.mubble.carbonite_wall": "Carbonite Wall",
+    "//block.mubble.carbonite_slab": "Carbonite Slab",
+    "//block.mubble.carbonite_vertical_slab": "Carbonite Vertical Slab",
+    "//block.mubble.carbonite_wall": "Carbonite Wall",
     "block.mubble.polished_carbonite": "Polished Carbonite",
     "block.mubble.polished_carbonite_stairs": "Polished Carbonite Stairs",
-    //"block.mubble.polished_carbonite_slab": "Polished Carbonite Slab",
-    //"block.mubble.polished_carbonite_vertical_slab": "Polished Carbonite Vertical Slab",
+    "//block.mubble.polished_carbonite_slab": "Polished Carbonite Slab",
+    "//block.mubble.polished_carbonite_vertical_slab": "Polished Carbonite Vertical Slab",
     "block.mubble.footblock": "Footblock",
     "block.mubble.white_cloud_block": "White Cloud Block",
     "block.mubble.light_gray_cloud_block": "Light Grey Cloud Block",
     "block.mubble.gray_cloud_block": "Grey Cloud Block",
     "block.mubble.black_cloud_block": "Black Cloud Block",
-    //"block.mubble.tomato": "<newline>",
-    //"block.mubble.salad": "<newline>",
-    //"block.mubble.cheese_block": "<newline>",
-    //"block.mubble.unstable_stone": "<newline>",
-    //"block.mubble.ultimatum_portal": "<newline>",
-    //"block.mubble.blue_balloon": "<newline>",
-    //"block.mubble.light_blue_balloon": "<newline>",
-    //"block.mubble.cyan_balloon": "<newline>",
-    //"block.mubble.green_balloon": "<newline>",
-    //"block.mubble.lime_balloon": "<newline>",
-    //"block.mubble.yellow_balloon": "<newline>",
-    //"block.mubble.orange_balloon": "<newline>",
-    //"block.mubble.red_balloon": "<newline>",
-    //"block.mubble.pink_balloon": "<newline>",
-    //"block.mubble.magenta_balloon": "<newline>",
-    //"block.mubble.purple_balloon": "<newline>",
-    //"block.mubble.brown_balloon": "<newline>",
-    //"block.mubble.white_balloon": "<newline>",
-    //"block.mubble.light_gray_balloon": "<newline>",
-    //"block.mubble.gray_balloon": "<newline>",
-    //"block.mubble.black_balloon": "<newline>",
+    "//block.mubble.tomato": "<newline>",
+    "//block.mubble.salad": "<newline>",
+    "//block.mubble.cheese_block": "<newline>",
+    "//block.mubble.unstable_stone": "<newline>",
+    "//block.mubble.ultimatum_portal": "<newline>",
+    "//block.mubble.blue_balloon": "<newline>",
+    "//block.mubble.light_blue_balloon": "<newline>",
+    "//block.mubble.cyan_balloon": "<newline>",
+    "//block.mubble.green_balloon": "<newline>",
+    "//block.mubble.lime_balloon": "<newline>",
+    "//block.mubble.yellow_balloon": "<newline>",
+    "//block.mubble.orange_balloon": "<newline>",
+    "//block.mubble.red_balloon": "<newline>",
+    "//block.mubble.pink_balloon": "<newline>",
+    "//block.mubble.magenta_balloon": "<newline>",
+    "//block.mubble.purple_balloon": "<newline>",
+    "//block.mubble.brown_balloon": "<newline>",
+    "//block.mubble.white_balloon": "<newline>",
+    "//block.mubble.light_gray_balloon": "<newline>",
+    "//block.mubble.gray_balloon": "<newline>",
+    "//block.mubble.black_balloon": "<newline>",
 
     "block.mubble.question_block": "? Block",
     "block.mubble.empty_block": "Empty Block",
@@ -106,22 +106,22 @@
     "block.mubble.gray_mushroom_block": "Grey Mushroom Block",
     "block.mubble.black_mushroom_block": "Black Mushroom Block",
 
-    //"block.mubble.blue_tetris_block": "<newline>",
-    //"block.mubble.light_blue_tetris_block": "<newline>",
-    //"block.mubble.cyan_tetris_block": "<newline>",
-    //"block.mubble.green_tetris_block": "<newline>",
-    //"block.mubble.lime_tetris_block": "<newline>",
-    //"block.mubble.yellow_tetris_block": "<newline>",
-    //"block.mubble.orange_tetris_block": "<newline>",
-    //"block.mubble.red_tetris_block": "<newline>",
-    //"block.mubble.pink_tetris_block": "<newline>",
-    //"block.mubble.magenta_tetris_block": "<newline>",
-    //"block.mubble.purple_tetris_block": "<newline>",
-    //"block.mubble.brown_tetris_block": "<newline>",
-    //"block.mubble.white_tetris_block": "<newline>",
-    //"block.mubble.light_gray_tetris_block": "<newline>",
-    //"block.mubble.gray_tetris_block": "<newline>",
-    //"block.mubble.black_tetris_block": "<newline>",
+    "//block.mubble.blue_tetris_block": "<newline>",
+    "//block.mubble.light_blue_tetris_block": "<newline>",
+    "//block.mubble.cyan_tetris_block": "<newline>",
+    "//block.mubble.green_tetris_block": "<newline>",
+    "//block.mubble.lime_tetris_block": "<newline>",
+    "//block.mubble.yellow_tetris_block": "<newline>",
+    "//block.mubble.orange_tetris_block": "<newline>",
+    "//block.mubble.red_tetris_block": "<newline>",
+    "//block.mubble.pink_tetris_block": "<newline>",
+    "//block.mubble.magenta_tetris_block": "<newline>",
+    "//block.mubble.purple_tetris_block": "<newline>",
+    "//block.mubble.brown_tetris_block": "<newline>",
+    "//block.mubble.white_tetris_block": "<newline>",
+    "//block.mubble.light_gray_tetris_block": "<newline>",
+    "//block.mubble.gray_tetris_block": "<newline>",
+    "//block.mubble.black_tetris_block": "<newline>",
     "block.mubble.tetris_glass": "Tetris Glass",
     "block.mubble.japanese_tetris_cushion": "Japanese Tetris Cushion",
     "block.mubble.rainbow_tetris_scaffolding": "Rainbow Tetris Scaffolding",
@@ -131,9 +131,9 @@
     "block.mubble.medusa_stone": "Medusa's Stone",
     "block.mubble.medusa_bricks": "Medusa's Bricks",
     "block.mubble.medusa_brick_stairs": "Medusa's Brick Stairs",
-    //"block.mubble.medusa_brick_slab": "Medusa's Brick Slab",
-    //"block.mubble.medusa_brick_vertical_slab": "Medusa's Brick Vertical Slab",
-    //"block.mubble.medusa_brick_wall": "Medusa's Brick Wall",
+    "//block.mubble.medusa_brick_slab": "Medusa's Brick Slab",
+    "//block.mubble.medusa_brick_vertical_slab": "Medusa's Brick Vertical Slab",
+    "//block.mubble.medusa_brick_wall": "Medusa's Brick Wall",
     "block.mubble.blue_candy_cane_pillar": "Blue Candy Cane Pillar",
     "block.mubble.light_blue_candy_cane_pillar": "Light Blue Candy Cane Pillar",
     "block.mubble.cyan_candy_cane_pillar": "Cyan Candy Cane Pillar",
@@ -151,49 +151,49 @@
     "block.mubble.gray_candy_cane_pillar": "Grey Candy Cane Pillar",
     "block.mubble.black_candy_cane_pillar": "Black Candy Cane Pillar",
 
-    //"block.mubble.green_hill_grass_block": "<newline>",
-    //"block.mubble.green_hill_dirt": "<newline>",
-    //"block.mubble.marble_zone_stone": "<newline>",
-    //"block.mubble.yellow_studiopolis_clapper": "<newline>",
-    //"block.mubble.blue_studiopolis_clapper": "<newline>",
-    //"block.mubble.spring": "<newline>",
+    "//block.mubble.green_hill_grass_block": "<newline>",
+    "//block.mubble.green_hill_dirt": "<newline>",
+    "//block.mubble.marble_zone_stone": "<newline>",
+    "//block.mubble.yellow_studiopolis_clapper": "<newline>",
+    "//block.mubble.blue_studiopolis_clapper": "<newline>",
+    "//block.mubble.spring": "<newline>",
 
-    //"block.mubble.scarlet_grass_block": "<newline>",
-    //"block.mubble.scarlet_grass": "<newline>",
+    "//block.mubble.scarlet_grass_block": "<newline>",
+    "//block.mubble.scarlet_grass": "<newline>",
     "block.mubble.scarlet_mushroom": "Scarlet Mushroom",
-    //"block.mubble.scarlet_orchid": "<newline>",
+    "//block.mubble.scarlet_orchid": "<newline>",
 
     "block.mubble.iron_scaffolding": "Iron Scaffolding",
     "block.mubble.purple_bricks": "Purple Bricks",
     "block.mubble.purple_brick_stairs": "Purple Brick Stairs",
-    //"block.mubble.purple_brick_slab": "Purple Brick Slab",
-    //"block.mubble.purple_brick_vertical_slab": "Purple Brick Vertical Slab",
-    //"block.mubble.purple_brick_wall": "Purple Brick Vertical Wall",
+    "//block.mubble.purple_brick_slab": "Purple Brick Slab",
+    "//block.mubble.purple_brick_vertical_slab": "Purple Brick Vertical Slab",
+    "//block.mubble.purple_brick_wall": "Purple Brick Vertical Wall",
     "block.mubble.cyan_bricks": "Cyan Bricks",
     "block.mubble.cyan_brick_stairs": "Cyan Brick Stairs",
-    //"block.mubble.cyan_brick_slab": "Cyan Brick Slab",
-    //"block.mubble.cyan_brick_vertical_slab": "Cyan Brick Vertical Slab",
-    //"block.mubble.cyan_brick_wall": "Cyan Brick Vertical Wall",
+    "//block.mubble.cyan_brick_slab": "Cyan Brick Slab",
+    "//block.mubble.cyan_brick_vertical_slab": "Cyan Brick Vertical Slab",
+    "//block.mubble.cyan_brick_wall": "Cyan Brick Vertical Wall",
     "block.mubble.elder_pebbles": "Elder Pebbles",
     "block.mubble.space_matter": "Space Matter",
-    //"block.mubble.space_obsidian": "<newline>",
+    "//block.mubble.space_obsidian": "<newline>",
 
-    //"block.mubble.blue_puyo": "<newline>",
-    //"block.mubble.turquoise_puyo": "<newline>",
-    //"block.mubble.green_puyo": "<newline>",
-    //"block.mubble.yellow_puyo": "<newline>",
-    //"block.mubble.red_puyo": "<newline>",
-    //"block.mubble.purple_puyo": "<newline>",
-    //"block.mubble.garbage_puyo": "<newline>",
-    //"block.mubble.point_puyo": "<newline>",
-    //"block.mubble.hard_puyo": "<newline>",
-    //"block.mubble.iron_puyo": "<newline>",
-    //"block.mubble.puyo_block": "<newline>",
+    "//block.mubble.blue_puyo": "<newline>",
+    "//block.mubble.turquoise_puyo": "<newline>",
+    "//block.mubble.green_puyo": "<newline>",
+    "//block.mubble.yellow_puyo": "<newline>",
+    "//block.mubble.red_puyo": "<newline>",
+    "//block.mubble.purple_puyo": "<newline>",
+    "//block.mubble.garbage_puyo": "<newline>",
+    "//block.mubble.point_puyo": "<newline>",
+    "//block.mubble.hard_puyo": "<newline>",
+    "//block.mubble.iron_puyo": "<newline>",
+    "//block.mubble.puyo_block": "<newline>",
 
-    //"block.mubble.rewind_block": "<newline>",
+    "//block.mubble.rewind_block": "<newline>",
     "block.mubble.koretato_block": "Koretato Block",
 
-    //ITEMS
+    "comment": "ITEMS",
     "item.mubble.vanadium": "Vanadium",
     "item.mubble.bandage": "Bandage",
     "item.mubble.wheat_flour": "Wheat Flour",
@@ -203,15 +203,15 @@
     "item.mubble.caramel_crepe": "Caramel Crêpe",
     "item.mubble.candy_cane": "Candy Cane",
     "item.mubble.burger": "Burger",
-    //"item.mubble.tomato": "<newline>",
-    //"item.mubble.salad": "<newline>",
-    //"item.mubble.cheese": "<newline>",
-    //"item.mubble.totem_of_ascending": "<newline>",
+    "//item.mubble.tomato": "<newline>",
+    "//item.mubble.salad": "<newline>",
+    "//item.mubble.cheese": "<newline>",
+    "//item.mubble.totem_of_ascending": "<newline>",
 
     "item.mubble.super_mushroom": "Super Mushroom",
     "item.mubble.peach": "Peach",
     "item.mubble.cape_feather": "Cape Feather",
-    //"item.mubble.super_cape_feather": "<newline>",
+    "//item.mubble.super_cape_feather": "<newline>",
     "item.mubble.super_star": "Super Star",
     "item.mubble.yellow_coin": "Yellow Coin",
     "item.mubble.red_coin": "Red Coin",
@@ -231,9 +231,9 @@
     "item.mubble.record.nb_waluigi_pinball.desc": "Mario Kart DS - Waluigi Pinball (NoteBlock Remix)",
     "item.mubble.record.nb_harvest_hazards.desc": "Donkey Kong Country: Tropical Freeze - Harvest Hazards (NoteBlock Remix)",
 
-    //COSTUMES
+    "comment": "COSTUMES",
     "item.mubble.headphones": "Headphones",
-    //"item.mubble.christmas_hat": "<newline>",
+    "//item.mubble.christmas_hat": "<newline>",
 
     "item.mubble.cappy": "Cappy",
     "item.mubble.luigi_cap": "Luigi Cap",
@@ -244,49 +244,49 @@
     "item.mubble.gooigi_cap": "Gooigi's Cap",
     "item.mubble.princess_peach_crown": "Princess Peach's Crown",
     "item.mubble.princess_daisy_crown": "Princess Daisy's Crown",
-    //"item.mubble.rosalina_crown": "<newline>",
+    "//item.mubble.rosalina_crown": "<newline>",
     "item.mubble.pink_gold_peach_crown": "Pink Gold Peach's Crown",
     "item.mubble.super_crown": "Super Crown",
-    //"item.mubble.broque_monsieur_head": "<newline>",
+    "//item.mubble.broque_monsieur_head": "<newline>",
 
     "item.mubble.bandana": "Bandana",
 
-    //"item.mubble.snorlax_hat": "<newline>",
+    "//item.mubble.snorlax_hat": "<newline>",
 
-    //"item.mubble.top_hat": "<newline>",
+    "//item.mubble.top_hat": "<newline>",
 
     "item.mubble.ralsei_hat": "Ralsei's Hat",
-    //"item.mubble.king_round_mask": "<newline>",
+    "//item.mubble.king_round_mask": "<newline>",
 
-    //"item.mubble.baldi_head": "<newline>",
+    "//item.mubble.baldi_head": "<newline>",
 
     "item.mubble.mayro_cap": "Mayro's Cap",
     "item.mubble.noteblock_head": "NoteBlock's Head",
 
-    //ENTITIES
+    "comment": "ENTITIES",
     "entity.toad": "Toad",
     "entity.chincho": "Chincho",
 
-    //SUBTITLES
+    "comment": "SUBTITLES",
     "subtitles.block.question_block.mubble.loot.power_up": "? block.mubble drops power up",
     "subtitles.block.question_block.mubble.loot.coin": "? block.mubble drops coin",
-    //"subtitles.block.note_block.jump": "<newline>",
-    //"subtitles.block.rewind_block.mubble.disappear": "<newline>",
-    //"subtitles.block.rewind_block.mubble.reappear": "<newline>",
-    //"subtitles.item.annoying_dog.disappear": "<newline>",
-    //"subtitles.item.annoying_dog.bark": "<newline>",
+    "//subtitles.block.note_block.jump": "<newline>",
+    "//subtitles.block.rewind_block.mubble.disappear": "<newline>",
+    "//subtitles.block.rewind_block.mubble.reappear": "<newline>",
+    "//subtitles.item.annoying_dog.disappear": "<newline>",
+    "//subtitles.item.annoying_dog.bark": "<newline>",
     "subtitles.item.cape_feather.use": "Cape Feather used",
     "subtitles.item.smash_ball.use": "Smash Ball used",
-    //"subtitles.costume.cappy.ambient": "<newline>",
-    //"subtitles.costume.cappy.ambient.nether": "<newline>",
-    //"subtitles.costume.cappy.equip": "<newline>",
-    //"subtitles.costume.cappy.happy": "<newline>",
-    //"subtitles.costume.cappy.help": "<newline>",
+    "//subtitles.costume.cappy.ambient": "<newline>",
+    "//subtitles.costume.cappy.ambient.nether": "<newline>",
+    "//subtitles.costume.cappy.equip": "<newline>",
+    "//subtitles.costume.cappy.happy": "<newline>",
+    "//subtitles.costume.cappy.help": "<newline>",
     "subtitles.entity.toad.ambient": "Toad mumbles",
     "subtitles.entity.toad.hurt": "Toad hurts",
     "subtitles.entity.toad.death": "Toad dies",
 
-    //ADVANCEMENTS
+    "comment": "ADVANCEMENTS",
     "advancements.mubble.root.title": "Mubble",
     "advancements.mubble.root.description": "A grand new journey",
     "advancements.mubble.get_coin.title": "It's mine! Gold!",
@@ -302,9 +302,9 @@
     "advancements.mubble.get_tetris_block.mubble.title": "It's All Connected",
     "advancements.mubble.get_tetris_block.mubble.description": "Get your hand on a Tetris Block",
 
-    //COMMANDS
+    "comment": "COMMANDS",
     "commands.motion.usage": "/motion <entity> <set|add> [dX] [dY] [dZ]",
-    //"commands.motion.success": "<newline>",
+    "//commands.motion.success": "<newline>",
 
     //OTHER
     "item.mubble.cappy.secret_status": "How paradoxal... :)",
