--- a/src/main/resources/assets/mubble/lang/es_es.json
+++ b/src/main/resources/assets/mubble/lang/es_es.json
@@ -1,42 +1,42 @@
 {
-    //CREATIVE TABS
+    "comment": "CREATIVE TABS",
     "itemGroup.mubble_blocks": "Bloques de Mubble",
     "itemGroup.mubble_items": "Objetos de Mubble",
     "itemGroup.mubble_costumes": "Trajes de Mubble",
 
-    //BLOCKS
+    "comment": "BLOCKS",
     "block.mubble.vanadium_block": "Bloque de vanadio",
     "block.mubble.vanadium_ore": "Mena de vanadio",
     "block.mubble.red_bricks": "Ladrillos rojos",
     "block.mubble.red_brick_stairs": "Escalera de ladrillos rojos",
-    //"block.mubble.red_brick_slab": "Red Brick Slab",
-    //"block.mubble.red_brick_vertical_slab": "Red Brick Vertical Slab",
-    //"block.mubble.red_brick_wall": "Red Brick Wall",
+    "//block.mubble.red_brick_slab": "Red Brick Slab",
+    "//block.mubble.red_brick_vertical_slab": "Red Brick Vertical Slab",
+    "//block.mubble.red_brick_wall": "Red Brick Wall",
     "block.mubble.white_bricks": "Ladrillos blancos",
     "block.mubble.white_brick_stairs": "Escalera de ladrillos blancos",
-    //"block.mubble.white_brick_slab": "White Brick Slab",
-    //"block.mubble.white_brick_vertical_slab": "White Brick Vertical Slab",
-    //"block.mubble.white_brick_wall": "White Brick Wall",
+    "//block.mubble.white_brick_slab": "White Brick Slab",
+    "//block.mubble.white_brick_vertical_slab": "White Brick Vertical Slab",
+    "//block.mubble.white_brick_wall": "White Brick Wall",
     "block.mubble.blunite": "Blunita",
     "block.mubble.blunite_stairs": "Escalera de blunita",
     "block.mubble.blunite_wall": "Muro de blunita",
-    //"block.mubble.blunite_slab": "Blunite Slab",
-    //"block.mubble.blunite_vertical_slab": "Blunite Vertical Slab",
-    //"block.mubble.blunite_wall": "Blunite Wall",
+    "//block.mubble.blunite_slab": "Blunite Slab",
+    "//block.mubble.blunite_vertical_slab": "Blunite Vertical Slab",
+    "//block.mubble.blunite_wall": "Blunite Wall",
     "block.mubble.polished_blunite": "Blunita pulida",
     "block.mubble.polished_blunite_stairs": "Escalera de blunita pulida",
-    //"block.mubble.polished_blunite_slab": "Polished Blunite Slab",
-    //"block.mubble.polished_blunite_vertical_slab": "Polished Blunite Vertical Slab",
+    "//block.mubble.polished_blunite_slab": "Polished Blunite Slab",
+    "//block.mubble.polished_blunite_vertical_slab": "Polished Blunite Vertical Slab",
     "block.mubble.carbonite": "Carbonita",
     "block.mubble.carbonite_stairs": "Escalera de carbonita",
     "block.mubble.carbonite_wall": "Muro de carbonita",
-    //"block.mubble.carbonite_slab": "Carbonite Slab",
-    //"block.mubble.carbonite_vertical_slab": "Carbonite Vertical Slab",
-    //"block.mubble.carbonite_wall": "Carbonite Wall",
+    "//block.mubble.carbonite_slab": "Carbonite Slab",
+    "//block.mubble.carbonite_vertical_slab": "Carbonite Vertical Slab",
+    "//block.mubble.carbonite_wall": "Carbonite Wall",
     "block.mubble.polished_carbonite": "Carbonita pulida",
     "block.mubble.polished_carbonite_stairs": "Escalera de carbonita pulida",
-    //"block.mubble.polished_carbonite_slab": "Polished Carbonite Slab",
-    //"block.mubble.polished_carbonite_vertical_slab": "Polished Carbonite Vertical Slab",
+    "//block.mubble.polished_carbonite_slab": "Polished Carbonite Slab",
+    "//block.mubble.polished_carbonite_vertical_slab": "Polished Carbonite Vertical Slab",
     "block.mubble.footblock": "Futbloque",
     "block.mubble.white_cloud_block": "Bloque de nube blanca",
     "block.mubble.light_gray_cloud_block": "Bloque de nube gris claro",
@@ -45,24 +45,24 @@
     "block.mubble.tomato": "Tomates",
     "block.mubble.salad": "Ensalada",
     "block.mubble.cheese_block": "Bloque de queso",
-    //"block.mubble.unstable_stone": "<newline>",
-    //"block.mubble.ultimatum_portal": "<newline>",
-    //"block.mubble.blue_balloon": "<newline>",
-    //"block.mubble.light_blue_balloon": "<newline>",
-    //"block.mubble.cyan_balloon": "<newline>",
-    //"block.mubble.green_balloon": "<newline>",
-    //"block.mubble.lime_balloon": "<newline>",
-    //"block.mubble.yellow_balloon": "<newline>",
-    //"block.mubble.orange_balloon": "<newline>",
-    //"block.mubble.red_balloon": "<newline>",
-    //"block.mubble.pink_balloon": "<newline>",
-    //"block.mubble.magenta_balloon": "<newline>",
-    //"block.mubble.purple_balloon": "<newline>",
-    //"block.mubble.brown_balloon": "<newline>",
-    //"block.mubble.white_balloon": "<newline>",
-    //"block.mubble.light_gray_balloon": "<newline>",
-    //"block.mubble.gray_balloon": "<newline>",
-    //"block.mubble.black_balloon": "<newline>",
+    "//block.mubble.unstable_stone": "<newline>",
+    "//block.mubble.ultimatum_portal": "<newline>",
+    "//block.mubble.blue_balloon": "<newline>",
+    "//block.mubble.light_blue_balloon": "<newline>",
+    "//block.mubble.cyan_balloon": "<newline>",
+    "//block.mubble.green_balloon": "<newline>",
+    "//block.mubble.lime_balloon": "<newline>",
+    "//block.mubble.yellow_balloon": "<newline>",
+    "//block.mubble.orange_balloon": "<newline>",
+    "//block.mubble.red_balloon": "<newline>",
+    "//block.mubble.pink_balloon": "<newline>",
+    "//block.mubble.magenta_balloon": "<newline>",
+    "//block.mubble.purple_balloon": "<newline>",
+    "//block.mubble.brown_balloon": "<newline>",
+    "//block.mubble.white_balloon": "<newline>",
+    "//block.mubble.light_gray_balloon": "<newline>",
+    "//block.mubble.gray_balloon": "<newline>",
+    "//block.mubble.black_balloon": "<newline>",
 
     "block.mubble.question_block": "Bloque ?",
     "block.mubble.empty_block": "Bloque vacío",
@@ -131,9 +131,9 @@
     "block.mubble.medusa_stone": "Piedra medusa",
     "block.mubble.medusa_bricks": "Ladrillos de medusa",
     "block.mubble.medusa_brick_stairs": "Escalera de ladrillos de medusa",
-    //"block.mubble.medusa_brick_slab": "Medusa's Brick Slab",
-    //"block.mubble.medusa_brick_vertical_slab": "Medusa's Brick Vertical Slab",
-    //"block.mubble.medusa_brick_wall": "Medusa's Brick Wall",
+    "//block.mubble.medusa_brick_slab": "Medusa's Brick Slab",
+    "//block.mubble.medusa_brick_vertical_slab": "Medusa's Brick Vertical Slab",
+    "//block.mubble.medusa_brick_wall": "Medusa's Brick Wall",
     "block.mubble.blue_candy_cane_pillar": "Pilar de bastón de caramelo azul",
     "block.mubble.light_blue_candy_cane_pillar": "Pilar de bastón de caramelo celeste",
     "block.mubble.cyan_candy_cane_pillar": "Pilar de bastón de caramelo cian",
@@ -153,10 +153,10 @@
 
     "block.mubble.green_hill_grass_block": "Bloque de césped de Green Hill",
     "block.mubble.green_hill_dirt": "Tierra de Green Hill",
-    //"block.mubble.marble_zone_stone": "<newline>",
+    "//block.mubble.marble_zone_stone": "<newline>",
     "block.mubble.yellow_studiopolis_clapper": "Badajo de Studiópolis amarillo",
     "block.mubble.blue_studiopolis_clapper": "Badajo de Studiópolis azul",
-    //"block.mubble.spring": "<newline>",
+    "//block.mubble.spring": "<newline>",
 
     "block.mubble.scarlet_grass_block": "Bloque de césped escarlata",
     "block.mubble.scarlet_grass": "Césped de escarlata",
@@ -166,34 +166,34 @@
     "block.mubble.iron_scaffolding": "Andamio de hierro",
     "block.mubble.purple_bricks": "Ladrillos morados",
     "block.mubble.purple_brick_stairs": "Escalera de ladrillos morados",
-    //"block.mubble.purple_brick_slab": "Purple Brick Slab",
-    //"block.mubble.purple_brick_vertical_slab": "Purple Brick Vertical Slab",
-    //"block.mubble.purple_brick_wall": "Purple Brick Vertical Wall",
+    "//block.mubble.purple_brick_slab": "Purple Brick Slab",
+    "//block.mubble.purple_brick_vertical_slab": "Purple Brick Vertical Slab",
+    "//block.mubble.purple_brick_wall": "Purple Brick Vertical Wall",
     "block.mubble.cyan_bricks": "Ladrillos cian",
     "block.mubble.cyan_brick_stairs": "Escalera de ladrillos cian",
-    //"block.mubble.cyan_brick_slab": "Cyan Brick Slab",
-    //"block.mubble.cyan_brick_vertical_slab": "Cyan Brick Vertical Slab",
-    //"block.mubble.cyan_brick_wall": "Cyan Brick Vertical Wall",
+    "//block.mubble.cyan_brick_slab": "Cyan Brick Slab",
+    "//block.mubble.cyan_brick_vertical_slab": "Cyan Brick Vertical Slab",
+    "//block.mubble.cyan_brick_wall": "Cyan Brick Vertical Wall",
     "block.mubble.elder_pebbles": "Guijarros antiguos",
     "block.mubble.space_matter": "Materia espacial",
-    //"block.mubble.space_obsidian": "<newline>",
+    "//block.mubble.space_obsidian": "<newline>",
 
-    //"block.mubble.blue_puyo": "<newline>",
-    //"block.mubble.turquoise_puyo": "<newline>",
-    //"block.mubble.green_puyo": "<newline>",
-    //"block.mubble.yellow_puyo": "<newline>",
-    //"block.mubble.red_puyo": "<newline>",
-    //"block.mubble.purple_puyo": "<newline>",
-    //"block.mubble.garbage_puyo": "<newline>",
-    //"block.mubble.point_puyo": "<newline>",
-    //"block.mubble.hard_puyo": "<newline>",
-    //"block.mubble.iron_puyo": "<newline>",
-    //"block.mubble.puyo_block": "<newline>",
+    "//block.mubble.blue_puyo": "<newline>",
+    "//block.mubble.turquoise_puyo": "<newline>",
+    "//block.mubble.green_puyo": "<newline>",
+    "//block.mubble.yellow_puyo": "<newline>",
+    "//block.mubble.red_puyo": "<newline>",
+    "//block.mubble.purple_puyo": "<newline>",
+    "//block.mubble.garbage_puyo": "<newline>",
+    "//block.mubble.point_puyo": "<newline>",
+    "//block.mubble.hard_puyo": "<newline>",
+    "//block.mubble.iron_puyo": "<newline>",
+    "//block.mubble.puyo_block": "<newline>",
 
-    //"block.mubble.rewind_block": "<newline>",
+    "//block.mubble.rewind_block": "<newline>",
     "block.mubble.koretato_block": "Bloque Koretato",
 
-    //ITEMS
+    "comment": "ITEMS",
     "item.mubble.vanadium": "Vanadio",
     "item.mubble.bandage": "Vendaje",
     "item.mubble.wheat_flour": "Harina de trigo",
@@ -206,12 +206,12 @@
     "item.mubble.tomato": "Tomate",
     "item.mubble.salad": "Ensalada",
     "item.mubble.cheese": "Queso",
-    //"item.mubble.totem_of_ascending": "<newline>",
+    "//item.mubble.totem_of_ascending": "<newline>",
 
     "item.mubble.super_mushroom": "Súper champiñón",
     "item.mubble.peach": "Durazno",
     "item.mubble.cape_feather": "Pluma",
-    //"item.mubble.super_cape_feather": "<newline>",
+    "//item.mubble.super_cape_feather": "<newline>",
     "item.mubble.super_star": "Superestrella",
     "item.mubble.yellow_coin": "Moneda amarilla",
     "item.mubble.red_coin": "Moneda roja",
@@ -231,7 +231,7 @@
     "item.mubble.record.nb_waluigi_pinball.desc": "Mario Kart DS - Waluigi Pinball (NoteBlock Remix)",
     "item.mubble.record.nb_harvest_hazards.desc": "Donkey Kong Country: Tropical Freeze - Harvest Hazards (NoteBlock Remix)",
 
-    //COSTUMES
+    "comment": "COSTUMES",
     "item.mubble.headphones": "Cascos",
     "item.mubble.christmas_hat": "Sombrero de Navidad",
 
@@ -251,40 +251,40 @@
 
     "item.mubble.bandana": "Pañuelo",
 
-    //"item.mubble.snorlax_hat": "<newline>",
+    "//item.mubble.snorlax_hat": "<newline>",
 
     "item.mubble.top_hat": "Sombrero de copa",
 
     "item.mubble.ralsei_hat": "Sombrero de Ralsei",
-    //"item.mubble.king_round_mask": "<newline>",
+    "//item.mubble.king_round_mask": "<newline>",
 
-    //"item.mubble.baldi_head": "<newline>",
+    "//item.mubble.baldi_head": "<newline>",
 
     "item.mubble.mayro_cap": "Gorra de Mayro",
     "item.mubble.noteblock_head": "Cabeza de Noteblock",
 
-    //ENTITIES
+    "comment": "ENTITIES",
     "entity.toad": "Toad",
     "entity.chincho": "Chincho",
 
-    //SUBTITLES
+    "comment": "SUBTITLES",
     "subtitles.block.question_block.mubble.loot.super_mushroom": "Bloque ? suelta un súper champiñón",
     "subtitles.block.question_block.mubble.loot.coin": "Bloque ? suelta una moneda",
-    //"subtitles.block.note_block.jump": "<newline>",
-    //"subtitles.item.annoying_dog.disappear": "<newline>",
-    //"subtitles.item.annoying_dog.bark": "<newline>",
+    "//subtitles.block.note_block.jump": "<newline>",
+    "//subtitles.item.annoying_dog.disappear": "<newline>",
+    "//subtitles.item.annoying_dog.bark": "<newline>",
     "subtitles.item.cape_feather.use": "Pluma utilizada",
     "subtitles.item.smash_ball.use": "Bola de Smash utilizada",
-    //"subtitles.costume.cappy.ambient": "<newline>",
-    //"subtitles.costume.cappy.ambient.nether": "<newline>",
-    //"subtitles.costume.cappy.equip": "<newline>",
-    //"subtitles.costume.cappy.happy": "<newline>",
-    //"subtitles.costume.cappy.help": "<newline>",
+    "//subtitles.costume.cappy.ambient": "<newline>",
+    "//subtitles.costume.cappy.ambient.nether": "<newline>",
+    "//subtitles.costume.cappy.equip": "<newline>",
+    "//subtitles.costume.cappy.happy": "<newline>",
+    "//subtitles.costume.cappy.help": "<newline>",
     "subtitles.entity.toad.ambient": "Toad balbucea",
     "subtitles.entity.toad.hurt": "Toad herido",
     "subtitles.entity.toad.death": "Toad muere",
 
-    //ADVANCEMENTS
+    "comment": "ADVANCEMENTS",
     "advancements.mubble.root.title": "Mubble",
     "advancements.mubble.root.description": "Una nueva aventura",
     "advancements.mubble.get_coin.title": "¡Es mío! ¡Oro!",
@@ -300,7 +300,7 @@
     "advancements.mubble.get_tetris_block.mubble.title": "Está todo conectado",
     "advancements.mubble.get_tetris_block.mubble.description": "Consigue un bloque Tetris",
 
-    //COMMANDS
+    "comment": "COMMANDS",
     "commands.motion.usage": "/motion <entity> <set|add> [dX] [dY] [dZ]"
-    //"commands.motion.success": "<newline>"
+    "//commands.motion.success": "<newline>"
 }
