--- a/src/main/resources/assets/mubble/lang/fr_fr.json
+++ b/src/main/resources/assets/mubble/lang/fr_fr.json
@@ -1,42 +1,42 @@
 {
-    //CREATIVE TABS
+    "comment": "CREATIVE TABS",
     "itemGroup.mubble_blocks": "Blocs Mubble",
     "itemGroup.mubble_items": "Objets Mubble",
     "itemGroup.mubble_costumes": "Costumes Mubble",
 
-    //BLOCKS
+    "comment": "BLOCKS",
     "block.mubble.vanadium_block": "Bloc de vanadium",
     "block.mubble.vanadium_ore": "Minerai de vanadium",
     "block.mubble.red_bricks": "Briques rouges",
     "block.mubble.red_brick_stairs": "Escaliers en brique rouge",
-    //"block.mubble.red_brick_slab": "Red Brick Slab",
-    //"block.mubble.red_brick_vertical_slab": "Red Brick Vertical Slab",
-    //"block.mubble.red_brick_wall": "Red Brick Wall",
+    "//block.mubble.red_brick_slab": "Red Brick Slab",
+    "//block.mubble.red_brick_vertical_slab": "Red Brick Vertical Slab",
+    "//block.mubble.red_brick_wall": "Red Brick Wall",
     "block.mubble.white_bricks": "Briques blanches",
     "block.mubble.white_brick_stairs": "Escaliers en brique blanche",
-    //"block.mubble.white_brick_slab": "White Brick Slab",
-    //"block.mubble.white_brick_vertical_slab": "White Brick Vertical Slab",
-    //"block.mubble.white_brick_wall": "White Brick Wall",
+    "//block.mubble.white_brick_slab": "White Brick Slab",
+    "//block.mubble.white_brick_vertical_slab": "White Brick Vertical Slab",
+    "//block.mubble.white_brick_wall": "White Brick Wall",
     "block.mubble.blunite": "Blunite",
     "block.mubble.blunite_stairs": "Escaliers en blunite",
     "block.mubble.blunite_wall": "Muret en blunite",
-    //"block.mubble.blunite_slab": "Blunite Slab",
-    //"block.mubble.blunite_vertical_slab": "Blunite Vertical Slab",
-    //"block.mubble.blunite_wall": "Blunite Wall",
+    "//block.mubble.blunite_slab": "Blunite Slab",
+    "//block.mubble.blunite_vertical_slab": "Blunite Vertical Slab",
+    "//block.mubble.blunite_wall": "Blunite Wall",
     "block.mubble.polished_blunite": "Blunite poli",
     "block.mubble.polished_blunite_stairs": "Escaliers en blunite poli",
-    //"block.mubble.polished_blunite_slab": "Polished Blunite Slab",
-    //"block.mubble.polished_blunite_vertical_slab": "Polished Blunite Vertical Slab",
+    "//block.mubble.polished_blunite_slab": "Polished Blunite Slab",
+    "//block.mubble.polished_blunite_vertical_slab": "Polished Blunite Vertical Slab",
     "block.mubble.carbonite": "Carbonite",
     "block.mubble.carbonite_stairs": "Escaliers en carbonite",
     "block.mubble.carbonite_wall": "Muret en carbonite",
-    //"block.mubble.carbonite_slab": "Carbonite Slab",
-    //"block.mubble.carbonite_vertical_slab": "Carbonite Vertical Slab",
-    //"block.mubble.carbonite_wall": "Carbonite Wall",
+    "//block.mubble.carbonite_slab": "Carbonite Slab",
+    "//block.mubble.carbonite_vertical_slab": "Carbonite Vertical Slab",
+    "//block.mubble.carbonite_wall": "Carbonite Wall",
     "block.mubble.polished_carbonite": "Carbonite polie",
     "block.mubble.polished_carbonite_stairs": "Escaliers en carbonite poli",
-    //"block.mubble.polished_carbonite_slab": "Polished Carbonite Slab",
-    //"block.mubble.polished_carbonite_vertical_slab": "Polished Carbonite Vertical Slab",
+    "//block.mubble.polished_carbonite_slab": "Polished Carbonite Slab",
+    "//block.mubble.polished_carbonite_vertical_slab": "Polished Carbonite Vertical Slab",
     "block.mubble.footblock": "Bloc de foot",
     "block.mubble.white_cloud_block": "Bloc de nuage blanc",
     "block.mubble.light_gray_cloud_block": "Bloc de nuage gris clair",
@@ -47,22 +47,22 @@
     "block.mubble.cheese_block": "Bloc de fromage",
     "block.mubble.unstable_stone": "Roche instable",
     "block.mubble.ultimatum_portal": "Portail de l'Utimatum",
-    //"block.mubble.blue_balloon": "<newline>",
-    //"block.mubble.light_blue_balloon": "<newline>",
-    //"block.mubble.cyan_balloon": "<newline>",
-    //"block.mubble.green_balloon": "<newline>",
-    //"block.mubble.lime_balloon": "<newline>",
-    //"block.mubble.yellow_balloon": "<newline>",
-    //"block.mubble.orange_balloon": "<newline>",
-    //"block.mubble.red_balloon": "<newline>",
-    //"block.mubble.pink_balloon": "<newline>",
-    //"block.mubble.magenta_balloon": "<newline>",
-    //"block.mubble.purple_balloon": "<newline>",
-    //"block.mubble.brown_balloon": "<newline>",
-    //"block.mubble.white_balloon": "<newline>",
-    //"block.mubble.light_gray_balloon": "<newline>",
-    //"block.mubble.gray_balloon": "<newline>",
-    //"block.mubble.black_balloon": "<newline>",
+    "//block.mubble.blue_balloon": "<newline>",
+    "//block.mubble.light_blue_balloon": "<newline>",
+    "//block.mubble.cyan_balloon": "<newline>",
+    "//block.mubble.green_balloon": "<newline>",
+    "//block.mubble.lime_balloon": "<newline>",
+    "//block.mubble.yellow_balloon": "<newline>",
+    "//block.mubble.orange_balloon": "<newline>",
+    "//block.mubble.red_balloon": "<newline>",
+    "//block.mubble.pink_balloon": "<newline>",
+    "//block.mubble.magenta_balloon": "<newline>",
+    "//block.mubble.purple_balloon": "<newline>",
+    "//block.mubble.brown_balloon": "<newline>",
+    "//block.mubble.white_balloon": "<newline>",
+    "//block.mubble.light_gray_balloon": "<newline>",
+    "//block.mubble.gray_balloon": "<newline>",
+    "//block.mubble.black_balloon": "<newline>",
 
     "block.mubble.question_block": "Bloc ?",
     "block.mubble.empty_block": "Bloc vide",
@@ -131,9 +131,9 @@
     "block.mubble.medusa_stone": "Roche de Méduse",
     "block.mubble.medusa_bricks": "Briques de Méduse",
     "block.mubble.medusa_brick_stairs": "Escaliers en brique de Méduse",
-    //"block.mubble.medusa_brick_slab": "Medusa's Brick Slab",
-    //"block.mubble.medusa_brick_vertical_slab": "Medusa's Brick Vertical Slab",
-    //"block.mubble.medusa_brick_wall": "Medusa's Brick Wall",
+    "//block.mubble.medusa_brick_slab": "Medusa's Brick Slab",
+    "//block.mubble.medusa_brick_vertical_slab": "Medusa's Brick Vertical Slab",
+    "//block.mubble.medusa_brick_wall": "Medusa's Brick Wall",
     "block.mubble.blue_candy_cane_pillar": "Pilier de sucre d'orge bleu",
     "block.mubble.light_blue_candy_cane_pillar": "Pilier de sucre d'orge bleu clair",
     "block.mubble.cyan_candy_cane_pillar": "Pilier de sucre d'orge cyan",
@@ -156,7 +156,7 @@
     "block.mubble.marble_zone_stone": "Pierre de la zone Marble",
     "block.mubble.yellow_studiopolis_clapper": "Clap jaune de Studiopolis",
     "block.mubble.blue_studiopolis_clapper": "Clap bleu de Studiopolis",
-    //"block.mubble.spring": "<newline>",
+    "//block.mubble.spring": "<newline>",
 
     "block.mubble.scarlet_grass_block": "Bloc d'herbe écarlate",
     "block.mubble.scarlet_grass": "Herbe écarlate",
@@ -166,33 +166,33 @@
     "block.mubble.iron_scaffolding": "Échafaudage en fer",
     "block.mubble.purple_bricks": "Briques violettes",
     "block.mubble.purple_brick_stairs": "Escaliers en brique violette",
-    //"block.mubble.purple_brick_slab": "Purple Brick Slab",
-    //"block.mubble.purple_brick_vertical_slab": "Purple Brick Vertical Slab",
-    //"block.mubble.purple_brick_wall": "Purple Brick Vertical Wall",
+    "//block.mubble.purple_brick_slab": "Purple Brick Slab",
+    "//block.mubble.purple_brick_vertical_slab": "Purple Brick Vertical Slab",
+    "//block.mubble.purple_brick_wall": "Purple Brick Vertical Wall",
     "block.mubble.cyan_bricks": "Briques cyans",
     "block.mubble.cyan_brick_stairs": "Escaliers en brique cyan",
-    //"block.mubble.cyan_brick_slab": "Cyan Brick Slab",
-    //"block.mubble.cyan_brick_vertical_slab": "Cyan Brick Vertical Slab",
-    //"block.mubble.cyan_brick_wall": "Cyan Brick Vertical Wall",
+    "//block.mubble.cyan_brick_slab": "Cyan Brick Slab",
+    "//block.mubble.cyan_brick_vertical_slab": "Cyan Brick Vertical Slab",
+    "//block.mubble.cyan_brick_wall": "Cyan Brick Vertical Wall",
     "block.mubble.elder_pebbles": "Anciens galets",
     "block.mubble.space_matter": "Matière spatiale",
     "block.mubble.space_obsidian": "Obsidienne spatiale",
 
-    //"block.mubble.blue_puyo": "<newline>",
-    //"block.mubble.turquoise_puyo": "<newline>",
-    //"block.mubble.green_puyo": "<newline>",
-    //"block.mubble.yellow_puyo": "<newline>",
-    //"block.mubble.red_puyo": "<newline>",
-    //"block.mubble.purple_puyo": "<newline>",
-    //"block.mubble.garbage_puyo": "<newline>",
-    //"block.mubble.point_puyo": "<newline>",
-    //"block.mubble.hard_puyo": "<newline>",
-    //"block.mubble.iron_puyo": "<newline>",
-    //"block.mubble.puyo_block": "<newline>",
+    "//block.mubble.blue_puyo": "<newline>",
+    "//block.mubble.turquoise_puyo": "<newline>",
+    "//block.mubble.green_puyo": "<newline>",
+    "//block.mubble.yellow_puyo": "<newline>",
+    "//block.mubble.red_puyo": "<newline>",
+    "//block.mubble.purple_puyo": "<newline>",
+    "//block.mubble.garbage_puyo": "<newline>",
+    "//block.mubble.point_puyo": "<newline>",
+    "//block.mubble.hard_puyo": "<newline>",
+    "//block.mubble.iron_puyo": "<newline>",
+    "//block.mubble.puyo_block": "<newline>",
 
     "block.mubble.koretato_block": "Bloc Koretato",
 
-    //ITEMS
+    "comment": "ITEMS",
     "item.mubble.vanadium": "Vanadium",
     "item.mubble.bandage": "Bandage",
     "item.mubble.wheat_flour": "Farine de blé",
@@ -205,7 +205,7 @@
     "item.mubble.tomato": "Tomato",
     "item.mubble.salad": "Salade",
     "item.mubble.cheese": "Fromage",
-    //"item.mubble.totem_of_ascending": "<newline>",
+    "//item.mubble.totem_of_ascending": "<newline>",
 
     "item.mubble.super_mushroom": "Super champignon",
     "item.mubble.peach": "Pêche",
@@ -230,7 +230,7 @@
     "item.mubble.record.nb_waluigi_pinball.desc": "Mario Kart DS - Waluigi Pinball (NoteBlock Remix)",
     "item.mubble.record.nb_harvest_hazards.desc": "Donkey Kong Country: Tropical Freeze - Harvest Hazards (NoteBlock Remix)",
 
-    //COSTUMES
+    "comment": "COSTUMES",
     "item.mubble.headphones": "Casque audio",
     "item.mubble.christmas_hat": "Bonnet de Noël",
 
@@ -250,40 +250,40 @@
 
     "item.mubble.bandana": "Bandana",
 
-    //"item.mubble.snorlax_hat": "<newline>",
+    "//item.mubble.snorlax_hat": "<newline>",
 
     "item.mubble.top_hat": "Haut-de-forme",
 
     "item.mubble.ralsei_hat": "Chapeau de Ralsei",
-    //"item.mubble.king_round_mask": "<newline>",
+    "//item.mubble.king_round_mask": "<newline>",
 
     "item.mubble.baldi_head": "Tête de Baldi",
 
     "item.mubble.mayro_cap": "Casquette de Mayro",
     "item.mubble.noteblock_head": "Tête de Noteblock",
 
-    //ENTITIES
+    "comment": "ENTITIES",
     "entity.toad": "Toad",
     "entity.chincho": "Chincho",
 
-    //SUBTITLES
+    "comment": "SUBTITLES",
     "subtitles.block.question_block.mubble.loot.super_mushroom": "Super champignon sorti d'un bloc ?",
     "subtitles.block.question_block.mubble.loot.coin": "Pièce sortie d'un bloc ?",
-    //"subtitles.block.note_block.jump": "<newline>",
-    //"subtitles.item.annoying_dog.disappear": "<newline>",
-    //"subtitles.item.annoying_dog.bark": "<newline>",
+    "//subtitles.block.note_block.jump": "<newline>",
+    "//subtitles.item.annoying_dog.disappear": "<newline>",
+    "//subtitles.item.annoying_dog.bark": "<newline>",
     "subtitles.item.cape_feather.use": "Plume acrobate utilisée",
     "subtitles.item.smash_ball.use": "Balle Smash utilisée",
-    //"subtitles.costume.cappy.ambient": "<newline>",
-    //"subtitles.costume.cappy.ambient.nether": "<newline>",
-    //"subtitles.costume.cappy.equip": "<newline>",
-    //"subtitles.costume.cappy.happy": "<newline>",
-    //"subtitles.costume.cappy.help": "<newline>",
+    "//subtitles.costume.cappy.ambient": "<newline>",
+    "//subtitles.costume.cappy.ambient.nether": "<newline>",
+    "//subtitles.costume.cappy.equip": "<newline>",
+    "//subtitles.costume.cappy.happy": "<newline>",
+    "//subtitles.costume.cappy.help": "<newline>",
     "subtitles.entity.toad.ambient": "Marmonnement de Toad",
     "subtitles.entity.toad.hurt": "Toad blessé",
     "subtitles.entity.toad.death": "Toad qui meurt",
 
-    //ADVANCEMENTS
+    "comment": "ADVANCEMENTS",
     "advancements.mubble.root.title": "Mubble",
     "advancements.mubble.root.description": "Un tout nouveau voyage",
     "advancements.mubble.get_coin.title": "C'est à moi ! De l'or !",
@@ -299,9 +299,9 @@
     "advancements.mubble.get_tetris_block.mubble.title": "Connectés à travers l'espace",
     "advancements.mubble.get_tetris_block.mubble.description": "Attrapez un bloc Tetris",
 
-    //COMMANDS
+    "comment": "COMMANDS",
     "commands.motion.usage": "/motion <entity> <set|add> [dX] [dY] [dZ]",
-    //"commands.motion.success": "<newline>",
+    "//commands.motion.success": "<newline>",
 
     //OTHER
     "item.mubble.cappy.secret_status": "Tellement paradoxal... :)",
