--- a/src/main/resources/assets/mubble/lang/lol_us.json
+++ b/src/main/resources/assets/mubble/lang/lol_us.json
@@ -1,42 +1,42 @@
 {
-    //CREATIVE TABS
+    "comment": "CREATIVE TABS",
     "itemGroup.mubble_blocks": "Mubble cubes thingyz",
     "itemGroup.mubble_items": "Mubble toyz",
     "itemGroup.mubble_costumes": "Mubble put things on you for no reazon lol",
 
-    //BLOCKS
+    "comment": "BLOCKS",
     "block.mubble.vanadium_block": "shiny purple cube",
     "block.mubble.vanadium_ore": "shiny purple in blox",
     "block.mubble.red_bricks": "bloo brik",
     "block.mubble.red_brick_stairs": "bloo birk sters",
-    //"block.mubble.red_brick_slab": "Red Brick Slab",
-    //"block.mubble.red_brick_vertical_slab": "Red Brick Vertical Slab",
-    //"block.mubble.red_brick_wall": "Red Brick Wall",
+    "//block.mubble.red_brick_slab": "Red Brick Slab",
+    "//block.mubble.red_brick_vertical_slab": "Red Brick Vertical Slab",
+    "//block.mubble.red_brick_wall": "Red Brick Wall",
     "block.mubble.white_bricks": "cool brik",
     "block.mubble.white_brick_stairs": "cool brik sters",
-    //"block.mubble.white_brick_slab": "White Brick Slab",
-    //"block.mubble.white_brick_vertical_slab": "White Brick Vertical Slab",
-    //"block.mubble.white_brick_wall": "White Brick Wall",
+    "//block.mubble.white_brick_slab": "White Brick Slab",
+    "//block.mubble.white_brick_vertical_slab": "White Brick Vertical Slab",
+    "//block.mubble.white_brick_wall": "White Brick Wall",
     "block.mubble.blunite": "moon-a-bloc",
     "block.mubble.blunite_stairs": "moon-a-ster",
     "block.mubble.blunite_wall": "moon-a-woll",
-    //"block.mubble.blunite_slab": "Blunite Slab",
-    //"block.mubble.blunite_vertical_slab": "Blunite Vertical Slab",
-    //"block.mubble.blunite_wall": "Blunite Wall",
+    "//block.mubble.blunite_slab": "Blunite Slab",
+    "//block.mubble.blunite_vertical_slab": "Blunite Vertical Slab",
+    "//block.mubble.blunite_wall": "Blunite Wall",
     "block.mubble.polished_blunite": "pretteh monnbloc",
     "block.mubble.polished_blunite_stairs": "pretteh monnbloc sters",
-    //"block.mubble.polished_blunite_slab": "Polished Blunite Slab",
-    //"block.mubble.polished_blunite_vertical_slab": "Polished Blunite Vertical Slab",
+    "//block.mubble.polished_blunite_slab": "Polished Blunite Slab",
+    "//block.mubble.polished_blunite_vertical_slab": "Polished Blunite Vertical Slab",
     "block.mubble.carbonite": "blac stoneh",
     "block.mubble.carbonite_stairs": "blac stoneh sters",
     "block.mubble.carbonite_wall": "blac stoneh woll",
-    //"block.mubble.carbonite_slab": "Carbonite Slab",
-    //"block.mubble.carbonite_vertical_slab": "Carbonite Vertical Slab",
-    //"block.mubble.carbonite_wall": "Carbonite Wall",
+    "//block.mubble.carbonite_slab": "Carbonite Slab",
+    "//block.mubble.carbonite_vertical_slab": "Carbonite Vertical Slab",
+    "//block.mubble.carbonite_wall": "Carbonite Wall",
     "block.mubble.polished_carbonite": "pretteh blac ston",
     "block.mubble.polished_carbonite_stairs": "pretteh blac sters",
-    //"block.mubble.polished_carbonite_slab": "Polished Carbonite Slab",
-    //"block.mubble.polished_carbonite_vertical_slab": "Polished Carbonite Vertical Slab",
+    "//block.mubble.polished_carbonite_slab": "Polished Carbonite Slab",
+    "//block.mubble.polished_carbonite_vertical_slab": "Polished Carbonite Vertical Slab",
     "block.mubble.footblock": "SOCCEEEbloc",
     "block.mubble.white_cloud_block": "clou itz white",
     "block.mubble.light_gray_cloud_block": "clou itz less white",
@@ -106,22 +106,22 @@
     "block.mubble.gray_mushroom_block": "greey blocroom",
     "block.mubble.black_mushroom_block": "blac blocroom",
 
-    //"block.mubble.blue_tetris_block": "<newline>",
-    //"block.mubble.light_blue_tetris_block": "<newline>",
-    //"block.mubble.cyan_tetris_block": "<newline>",
-    //"block.mubble.green_tetris_block": "<newline>",
-    //"block.mubble.lime_tetris_block": "<newline>",
-    //"block.mubble.yellow_tetris_block": "<newline>",
-    //"block.mubble.orange_tetris_block": "<newline>",
-    //"block.mubble.red_tetris_block": "<newline>",
-    //"block.mubble.pink_tetris_block": "<newline>",
-    //"block.mubble.magenta_tetris_block": "<newline>",
-    //"block.mubble.purple_tetris_block": "<newline>",
-    //"block.mubble.brown_tetris_block": "<newline>",
-    //"block.mubble.white_tetris_block": "<newline>",
-    //"block.mubble.light_gray_tetris_block": "<newline>",
-    //"block.mubble.gray_tetris_block": "<newline>",
-    //"block.mubble.black_tetris_block": "<newline>",
+    "//block.mubble.blue_tetris_block": "<newline>",
+    "//block.mubble.light_blue_tetris_block": "<newline>",
+    "//block.mubble.cyan_tetris_block": "<newline>",
+    "//block.mubble.green_tetris_block": "<newline>",
+    "//block.mubble.lime_tetris_block": "<newline>",
+    "//block.mubble.yellow_tetris_block": "<newline>",
+    "//block.mubble.orange_tetris_block": "<newline>",
+    "//block.mubble.red_tetris_block": "<newline>",
+    "//block.mubble.pink_tetris_block": "<newline>",
+    "//block.mubble.magenta_tetris_block": "<newline>",
+    "//block.mubble.purple_tetris_block": "<newline>",
+    "//block.mubble.brown_tetris_block": "<newline>",
+    "//block.mubble.white_tetris_block": "<newline>",
+    "//block.mubble.light_gray_tetris_block": "<newline>",
+    "//block.mubble.gray_tetris_block": "<newline>",
+    "//block.mubble.black_tetris_block": "<newline>",
     "block.mubble.tetris_glass": "tetri glazz",
     "block.mubble.japanese_tetris_cushion": "jaPAN tetri sleep",
     "block.mubble.rainbow_tetris_scaffolding": "varicolordd tetri zcffolding",
@@ -131,25 +131,25 @@
     "block.mubble.medusa_stone": "the stone in the room with the sp0ky girl with snakes on her head",
     "block.mubble.medusa_bricks": "the bricks in the room with the sp00ky girl with snakes on her head",
     "block.mubble.medusa_brick_stairs": "the sterz in the room with the sp0ky girl with snakes on her head",
-    //"block.mubble.medusa_brick_slab": "Medusa's Brick Slab",
-    //"block.mubble.medusa_brick_vertical_slab": "Medusa's Brick Vertical Slab",
-    //"block.mubble.medusa_brick_wall": "Medusa's Brick Wall",
+    "//block.mubble.medusa_brick_slab": "Medusa's Brick Slab",
+    "//block.mubble.medusa_brick_vertical_slab": "Medusa's Brick Vertical Slab",
+    "//block.mubble.medusa_brick_wall": "Medusa's Brick Wall",
     "block.mubble.blue_candy_cane_pillar": "blue big christmas cane",
-    //"block.mubble.light_blue_candy_cane_pillar": "<newline>",
-    //"block.mubble.cyan_candy_cane_pillar": "<newline>",
+    "//block.mubble.light_blue_candy_cane_pillar": "<newline>",
+    "//block.mubble.cyan_candy_cane_pillar": "<newline>",
     "block.mubble.green_candy_cane_pillar": "gren big christmas cane",
-    //"block.mubble.lime_candy_cane_pillar": "<newline>",
+    "//block.mubble.lime_candy_cane_pillar": "<newline>",
     "block.mubble.yellow_candy_cane_pillar": "yelou big christmas cane",
-    //"block.mubble.orange_candy_cane_pillar": "<newline>",
+    "//block.mubble.orange_candy_cane_pillar": "<newline>",
     "block.mubble.red_candy_cane_pillar": "redd big christmas cane",
-    //"block.mubble.pink_candy_cane_pillar": "<newline>",
-    //"block.mubble.magenta_candy_cane_pillar": "<newline>",
+    "//block.mubble.pink_candy_cane_pillar": "<newline>",
+    "//block.mubble.magenta_candy_cane_pillar": "<newline>",
     "block.mubble.purple_candy_cane_pillar": "purpl big christmas cane",
-    //"block.mubble.brown_candy_cane_pillar": "<newline>",
-    //"block.mubble.white_candy_cane_pillar": "<newline>",
-    //"block.mubble.light_gray_candy_cane_pillar": "<newline>",
-    //"block.mubble.gray_candy_cane_pillar": "<newline>",
-    //"block.mubble.black_candy_cane_pillar": "<newline>",
+    "//block.mubble.brown_candy_cane_pillar": "<newline>",
+    "//block.mubble.white_candy_cane_pillar": "<newline>",
+    "//block.mubble.light_gray_candy_cane_pillar": "<newline>",
+    "//block.mubble.gray_candy_cane_pillar": "<newline>",
+    "//block.mubble.black_candy_cane_pillar": "<newline>",
 
     "block.mubble.green_hill_grass_block": "FEEST gress bloc",
     "block.mubble.green_hill_dirt": "FEEST dit",
@@ -166,14 +166,14 @@
     "block.mubble.iron_scaffolding": "irun zcffolding",
     "block.mubble.purple_bricks": "parpal brik",
     "block.mubble.purple_brick_stairs": "parpal sterz",
-    //"block.mubble.purple_brick_slab": "Purple Brick Slab",
-    //"block.mubble.purple_brick_vertical_slab": "Purple Brick Vertical Slab",
-    //"block.mubble.purple_brick_wall": "Purple Brick Vertical Wall",
+    "//block.mubble.purple_brick_slab": "Purple Brick Slab",
+    "//block.mubble.purple_brick_vertical_slab": "Purple Brick Vertical Slab",
+    "//block.mubble.purple_brick_wall": "Purple Brick Vertical Wall",
     "block.mubble.cyan_bricks": "nyan briks",
     "block.mubble.cyan_brick_stairs": "nyan sterz",
-    //"block.mubble.cyan_brick_slab": "Cyan Brick Slab",
-    //"block.mubble.cyan_brick_vertical_slab": "Cyan Brick Vertical Slab",
-    //"block.mubble.cyan_brick_wall": "Cyan Brick Vertical Wall",
+    "//block.mubble.cyan_brick_slab": "Cyan Brick Slab",
+    "//block.mubble.cyan_brick_vertical_slab": "Cyan Brick Vertical Slab",
+    "//block.mubble.cyan_brick_wall": "Cyan Brick Vertical Wall",
     "block.mubble.elder_pebbles": "old pebbL",
     "block.mubble.space_matter": "MARTIAN DIRT OoOoOoO",
     "block.mubble.space_obsidian": "STRONGER MARTIAN DIRT OoOoOoOiEr",
@@ -193,7 +193,7 @@
     "block.mubble.rewind_block": "aww dat'z hawt",
     "block.mubble.koretato_block": "Koretato blok",
 
-    //ITEMS
+    "comment": "ITEMS",
     "item.mubble.vanadium": "shiny purple",
     "item.mubble.bandage": "banaj",
     "item.mubble.wheat_flour": "wet floor",
@@ -206,7 +206,7 @@
     "item.mubble.tomato": "tomto",
     "item.mubble.salad": "sld",
     "item.mubble.cheese": "CHEEZ",
-    //"item.mubble.totem_of_ascending": "<newline>",
+    "//item.mubble.totem_of_ascending": "<newline>",
 
     "item.mubble.super_mushroom": "SUPA MUSH",
     "item.mubble.peach": "salty peesh very gud",
@@ -231,7 +231,7 @@
     "item.mubble.record.nb_waluigi_pinball.desc": "Mario Kart DS - Waluigi Pinball (NoteBlock Remix)",
     "item.mubble.record.nb_harvest_hazards.desc": "Donkey Kong Country: Tropical Freeze - Harvest Hazards (NoteBlock Remix)",
 
-    //COSTUMES
+    "comment": "COSTUMES",
     "item.mubble.headphones": "hedponz",
     "item.mubble.christmas_hat": "chirstmas hat",
 
@@ -263,30 +263,30 @@
     "item.mubble.mayro_cap": "Mayro hat",
     "item.mubble.noteblock_head": "NoteBlock hed",
 
-    //ENTITIES
+    "comment": "ENTITIES",
     "entity.toad": "tod",
     "entity.chincho": "tostarenan mummy",
 
-    //SUBTITLES
+    "comment": "SUBTITLES",
     "subtitles.block.question_block.mubble.loot.super_mushroom": "BLOCO ???? drop supa mush",
     "subtitles.block.question_block.mubble.loot.coin": "BLOCO ???? drop coin",
-    //"subtitles.block.note_block.jump": "<newline>",
-    //"subtitles.block.rewind_block.mubble.disappear": "<newline>",
-    //"subtitles.block.rewind_block.mubble.reappear": "<newline>",
-    //"subtitles.item.annoying_dog.disappear": "<newline>",
-    //"subtitles.item.annoying_dog.bark": "<newline>",
+    "//subtitles.block.note_block.jump": "<newline>",
+    "//subtitles.block.rewind_block.mubble.disappear": "<newline>",
+    "//subtitles.block.rewind_block.mubble.reappear": "<newline>",
+    "//subtitles.item.annoying_dog.disappear": "<newline>",
+    "//subtitles.item.annoying_dog.bark": "<newline>",
     "subtitles.item.cape_feather.use": "cap that makes you high jumped was actully used!",
     "subtitles.item.smash_ball.use": "sm4sh bol uzd",
-    //"subtitles.costume.cappy.ambient": "<newline>",
-    //"subtitles.costume.cappy.ambient.nether": "<newline>",
-    //"subtitles.costume.cappy.equip": "<newline>",
-    //"subtitles.costume.cappy.happy": "<newline>",
-    //"subtitles.costume.cappy.help": "<newline>",
+    "//subtitles.costume.cappy.ambient": "<newline>",
+    "//subtitles.costume.cappy.ambient.nether": "<newline>",
+    "//subtitles.costume.cappy.equip": "<newline>",
+    "//subtitles.costume.cappy.happy": "<newline>",
+    "//subtitles.costume.cappy.help": "<newline>",
     "subtitles.entity.toad.ambient": "tod bups",
     "subtitles.entity.toad.hurt": "todtod oofs",
     "subtitles.entity.toad.death": "tod ded",
 
-    //ADVANCEMENTS
+    "comment": "ADVANCEMENTS",
     "advancements.mubble.root.title": "Mubble",
     "advancements.mubble.root.description": "woohoo adventur",
     "advancements.mubble.get_coin.title": "gimme money!!1!",
@@ -302,7 +302,7 @@
     "advancements.mubble.get_tetris_block.mubble.title": "falin in th sky",
     "advancements.mubble.get_tetris_block.mubble.description": "tirtris bloks fun",
 
-    //COMMANDS
+    "comment": "COMMANDS",
     "commands.motion.usage": "/motion <entity> <set|add> [dX] [dY] [dZ]",
     "commands.motion.success": "teh vilicity of %s hv been change to %s %s %s omg gg"
 }
