--- a/src/main/resources/assets/mubble/lang/de_de.json
+++ b/src/main/resources/assets/mubble/lang/de_de.json
@@ -1,42 +1,42 @@
 {
-    //CREATIVE TABS
+    "comment": "CREATIVE TABS",
     "itemGroup.mubble_blocks": "Mubble-Blöcke",
     "itemGroup.mubble_items": "Mubble-Gegenstände",
     "itemGroup.mubble_costumes": "Mubble-Kostüme",
 
-    //BLOCKS
+    "comment": "BLOCKS",
     "block.mubble.vanadium_block": "Vanadium-block",
     "block.mubble.vanadium_ore": "Vanadium-Erz",
     "block.mubble.red_bricks": "Rote Ziegelsteine",
     "block.mubble.red_brick_stairs": "Rote Ziegeltreppe",
-    //"block.mubble.red_brick_slab": "Red Brick Slab",
-    //"block.mubble.red_brick_vertical_slab": "Red Brick Vertical Slab",
-    //"block.mubble.red_brick_wall": "Red Brick Wall",
+    "//block.mubble.red_brick_slab": "Red Brick Slab",
+    "//block.mubble.red_brick_vertical_slab": "Red Brick Vertical Slab",
+    "//block.mubble.red_brick_wall": "Red Brick Wall",
     "block.mubble.white_bricks": "Weiße Ziegelsteine",
     "block.mubble.white_brick_stairs": "Weiße Ziegeltreppe",
-    //"block.mubble.white_brick_slab": "White Brick Slab",
-    //"block.mubble.white_brick_vertical_slab": "White Brick Vertical Slab",
-    //"block.mubble.white_brick_wall": "White Brick Wall",
+    "//block.mubble.white_brick_slab": "White Brick Slab",
+    "//block.mubble.white_brick_vertical_slab": "White Brick Vertical Slab",
+    "//block.mubble.white_brick_wall": "White Brick Wall",
     "block.mubble.blunite": "Blunite",
     "block.mubble.blunite_stairs": "Blunite-Treppe",
     "block.mubble.blunite_wall": "Blunite-Mauer",
-    //"block.mubble.blunite_slab": "Blunite Slab",
-    //"block.mubble.blunite_vertical_slab": "Blunite Vertical Slab",
-    //"block.mubble.blunite_wall": "Blunite Wall",
+    "//block.mubble.blunite_slab": "Blunite Slab",
+    "//block.mubble.blunite_vertical_slab": "Blunite Vertical Slab",
+    "//block.mubble.blunite_wall": "Blunite Wall",
     "block.mubble.polished_blunite": "Polierter Blunite",
     "block.mubble.polished_blunite_stairs": "Polierte Blunite-Treppe",
-    //"block.mubble.polished_blunite_slab": "Polished Blunite Slab",
-    //"block.mubble.polished_blunite_vertical_slab": "Polished Blunite Vertical Slab",
+    "//block.mubble.polished_blunite_slab": "Polished Blunite Slab",
+    "//block.mubble.polished_blunite_vertical_slab": "Polished Blunite Vertical Slab",
     "block.mubble.carbonite": "Carbonite",
     "block.mubble.carbonite_stairs": "Carbonite-Treppe",
     "block.mubble.carbonite_wall": "Carbonite-Mauer",
-    //"block.mubble.carbonite_slab": "Carbonite Slab",
-    //"block.mubble.carbonite_vertical_slab": "Carbonite Vertical Slab",
-    //"block.mubble.carbonite_wall": "Carbonite Wall",
+    "//block.mubble.carbonite_slab": "Carbonite Slab",
+    "//block.mubble.carbonite_vertical_slab": "Carbonite Vertical Slab",
+    "//block.mubble.carbonite_wall": "Carbonite Wall",
     "block.mubble.polished_carbonite": "Polierter Carbonite",
     "block.mubble.polished_carbonite_stairs": "Polierte Carbonite-Treppe",
-    //"block.mubble.polished_carbonite_slab": "Polished Carbonite Slab",
-    //"block.mubble.polished_carbonite_vertical_slab": "Polished Carbonite Vertical Slab",
+    "//block.mubble.polished_carbonite_slab": "Polished Carbonite Slab",
+    "//block.mubble.polished_carbonite_vertical_slab": "Polished Carbonite Vertical Slab",
     "block.mubble.footblock": "Fußblock",
     "block.mubble.white_cloud_block": "Weißer Wolkenblock",
     "block.mubble.light_gray_cloud_block": "Hellgrauer Wolkenblock",
@@ -131,9 +131,9 @@
     "block.mubble.medusa_stone": "Medusa's Stein",
     "block.mubble.medusa_bricks": "Medusa's Ziegelsteine",
     "block.mubble.medusa_brick_stairs": "Medusa's Ziegeltreppe",
-    //"block.mubble.medusa_brick_slab": "Medusa's Brick Slab",
-    //"block.mubble.medusa_brick_vertical_slab": "Medusa's Brick Vertical Slab",
-    //"block.mubble.medusa_brick_wall": "Medusa's Brick Wall",
+    "//block.mubble.medusa_brick_slab": "Medusa's Brick Slab",
+    "//block.mubble.medusa_brick_vertical_slab": "Medusa's Brick Vertical Slab",
+    "//block.mubble.medusa_brick_wall": "Medusa's Brick Wall",
     "block.mubble.blue_candy_cane_pillar": "Blaue Zuckerstangensäule",
     "block.mubble.light_blue_candy_cane_pillar": "Hellblaue Zuckerstangensäule",
     "block.mubble.cyan_candy_cane_pillar": "Türkise Zuckerstangensäule",
@@ -166,14 +166,14 @@
     "block.mubble.iron_scaffolding": "Eisengerüst",
     "block.mubble.purple_bricks": "Violette Ziegelsteine",
     "block.mubble.purple_brick_stairs": "Violette Ziegeltreppe",
-    //"block.mubble.purple_brick_slab": "Purple Brick Slab",
-    //"block.mubble.purple_brick_vertical_slab": "Purple Brick Vertical Slab",
-    //"block.mubble.purple_brick_wall": "Purple Brick Vertical Wall",
+    "//block.mubble.purple_brick_slab": "Purple Brick Slab",
+    "//block.mubble.purple_brick_vertical_slab": "Purple Brick Vertical Slab",
+    "//block.mubble.purple_brick_wall": "Purple Brick Vertical Wall",
     "block.mubble.cyan_bricks": "Türkise Ziegelsteine",
     "block.mubble.cyan_brick_stairs": "Türkise Ziegeltreppe",
-    //"block.mubble.cyan_brick_slab": "Cyan Brick Slab",
-    //"block.mubble.cyan_brick_vertical_slab": "Cyan Brick Vertical Slab",
-    //"block.mubble.cyan_brick_wall": "Cyan Brick Vertical Wall",
+    "//block.mubble.cyan_brick_slab": "Cyan Brick Slab",
+    "//block.mubble.cyan_brick_vertical_slab": "Cyan Brick Vertical Slab",
+    "//block.mubble.cyan_brick_wall": "Cyan Brick Vertical Wall",
     "block.mubble.elder_pebbles": "Elder Pebbles",
     "block.mubble.space_matter": "Weltraummaterie",
     "block.mubble.space_obsidian": "Weltraumobsidian",
@@ -193,7 +193,7 @@
     "block.mubble.rewind_block": "Rückspulblock",
     "block.mubble.koretato_block": "Koretato-block",
 
-    //ITEMS
+    "comment": "ITEMS",
     "item.mubble.vanadium": "Vanadium",
     "item.mubble.bandage": "Verband",
     "item.mubble.wheat_flour": "Weizenmehl",
@@ -231,7 +231,7 @@
     "item.mubble.record.nb_waluigi_pinball.desc": "Mario Kart DS - Waluigi Pinball (NoteBlock Remix)",
     "item.mubble.record.nb_harvest_hazards.desc": "Donkey Kong Country: Tropical Freeze - Harvest Hazards (NoteBlock Remix)",
 
-    //COSTUMES
+    "comment": "COSTUMES",
     "item.mubble.headphones": "Kopfhörer",
     "item.mubble.christmas_hat": "Weihnachtshut",
 
@@ -263,11 +263,11 @@
     "item.mubble.mayro_cap": "Mayros Mütze",
     "item.mubble.noteblock_head": "Notenblock.mubble's Kopf",
 
-    //ENTITIES
+    "comment": "ENTITIES",
     "entity.toad": "Toad",
     "entity.chincho": "Chincho",
 
-    //SUBTITLES
+    "comment": "SUBTITLES",
     "subtitles.block.question_block.mubble.loot.power_up": "?-block.mubble gibt Power-Up",
     "subtitles.block.question_block.mubble.loot.coin": "?-block.mubble gibt Münze",
     "subtitles.block.note_block.jump": "Notenblock.mubble genutzt",
@@ -286,7 +286,7 @@
     "subtitles.entity.toad.hurt": "Toad verletzt",
     "subtitles.entity.toad.death": "Toad stirbt",
 
-    //ADVANCEMENTS
+    "comment": "ADVANCEMENTS",
     "advancements.mubble.root.title": "Mubble",
     "advancements.mubble.root.description": "Eine großartige neue Reise",
     "advancements.mubble.get_coin.title": "Es schürft! Gold!",
@@ -302,7 +302,7 @@
     "advancements.mubble.get_tetris_block.mubble.title": "Es Ist Alles Verbunden",
     "advancements.mubble.get_tetris_block.mubble.description": "Halte einen Tetris-block.mubble in deiner Hand",
 
-    //COMMANDS
+    "comment": "COMMANDS",
     "commands.motion.usage": "/motion <entity> <set|add> [dX] [dY] [dZ]",
     "commands.motion.success": "Ändert die Bewegung von %s zu %s, %s, %s",
 
