--- a/src/main/resources/assets/mubble/lang/nl_nl.json
+++ b/src/main/resources/assets/mubble/lang/nl_nl.json
@@ -1,10 +1,10 @@
 {
-    //CREATIVE TABS
+    "comment": "CREATIVE TABS",
     "itemGroup.mubble_blocks": "Mubble blokken",
     "itemGroup.mubble_items": "Mubble voorwerpen",
     "itemGroup.mubble_costumes": "Mubble kostuums",
 
-    //BLOCKS
+    "comment": "BLOCKS",
     "block.mubble.vanadium_block": "Vanadiumblok",
     "block.mubble.vanadium_ore": "Vanadiumerts",
     "block.mubble.red_bricks": "Rode bakstenen",
@@ -193,7 +193,7 @@
     "block.mubble.rewind_block": "Terugspoelblok",
     "block.mubble.koretato_block": "Koretato-blok",
 
-    //ITEMS
+    "comment": "ITEMS",
     "item.mubble.vanadium": "Vanadium",
     "item.mubble.bandage": "Verband",
     "item.mubble.wheat_flour": "Tarwemeel",
@@ -231,7 +231,7 @@
     "item.mubble.record.nb_waluigi_pinball.desc": "Mario Kart DS - Waluigi Pinball (NoteBlock Remix)",
     "item.mubble.record.nb_harvest_hazards.desc": "Donkey Kong Country: Tropical Freeze - Harvest Hazards (NoteBlock Remix)",
 
-    //COSTUMES
+    "comment": "COSTUMES",
     "item.mubble.headphones": "Koptelefoon",
     "item.mubble.christmas_hat": "Kerstmuts",
 
@@ -263,11 +263,11 @@
     "item.mubble.mayro_cap": "Mayro's pet",
     "item.mubble.noteblock_head": "NoteBlock's hoofd",
 
-    //ENTITIES
+    "comment": "ENTITIES",
     "entity.toad": "Toad",
     "entity.chincho": "Chincho",
 
-    //SUBTITLES
+    "comment": "SUBTITLES",
     "subtitles.block.question_block.mubble.loot.super_mushroom": "?-blok plundert super paddenstoel",
     "subtitles.block.question_block.mubble.loot.coin": "?-blok laat munt vallen",
     "subtitles.block.note_block.jump": "Nootblock.mubble wordt gebruikt",
@@ -286,7 +286,7 @@
     "subtitles.entity.toad.hurt": "Toad heeft pijn",
     "subtitles.entity.toad.death": "Toad sterft",
 
-    //ADVANCEMENTS
+    "comment": "ADVANCEMENTS",
     "advancements.mubble.root.title": "Mubble",
     "advancements.mubble.root.description": "Een grandioos nieuw avontuur",
     "advancements.mubble.get_coin.title": "Het is van mij! Goud!",
@@ -302,7 +302,7 @@
     "advancements.mubble.get_tetris_block.mubble.title": "Het is allemaal verbonden",
     "advancements.mubble.get_tetris_block.mubble.description": "Krijg je handen aan een Tetris blok",
 
-    //COMMANDS
+    "comment": "COMMANDS",
     "commands.motion.usage": "/motion <entity> <set|add> [dX] [dY] [dZ]",
     "commands.motion.success": "Beweging van %s veranderd naar %s, %s, %s",
 
